kubernetes/apps/storage/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
spec:
  hostnames: ["rook.${DOMAIN_APP}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-app
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: storage
          port: 7000
